--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,14 +87,14 @@
   <div id="carosel-home-desk" class="owl-carousel">
     <div class="carosel-imgs img1">
       <div class="txt-carosel-imgs">
-        <h3>Facilitating all types of Loans from the best banks</h3><br>
+        <!-- <h3>Facilitating all types of Loans from the best banks</h3><br>
         <h3>Associated with best insurance companies</h3><br>
-        <h3>Best offers to suit salaried individuals & businessmen</h3><br>
+        <h3>Best offers to suit salaried individuals & businessmen</h3><br> -->
       </div>
     </div>
     <div class="carosel-imgs img2">
       <div class="txt-carosel-imgs">
-        <h3><b>Personalized consultation & other services</b></h3>
+        <!-- <h3><b>Personalized consultation & other services</b></h3>
         <h3>Our Relationship Manager will visit your office or home</h3>
         <ul>
           <li>To make a presentation</li>
@@ -102,7 +102,7 @@
           <li>Get signatures</li>
           <li>Handover policy</li>
           <li>Settle claims</li>
-        </ul>
+        </ul> -->
       </div>
     </div>
     <!-- <div class="carosel-imgs img3"><%#= image_tag "carosel/desktop/personal-loan-banner.png", alt: "" %></div> -->
