--- a/app/views/home/emi_calculator.html.erb
+++ b/app/views/home/emi_calculator.html.erb
@@ -1,16 +1,17 @@
 <section id="emi-calc-banner">
 </section>
+<br><br>
 <section class="emi-calcul">
   <div class="container p-container">
     <div class="row row1">
       <div class="col-md-6">
-        Loan Amount (₹): <input type="number" class="form-control loanAmount" value="1">
-        <input type="range" min="1" max="100000" value="100" class="slider sldLoanAmount">
+        <label>Loan Amount (₹):</label><input type="number" class="form-control loanAmount" value="1">
+        <input type="range" min="1" max="1000000" value="100" class="slider sldLoanAmount">
         <hr class="emi-calc">
-        Rate of Interest (%): <input type="number" class="form-control loanRoi" value="1">
+        <label>Rate of Interest (%):</label><input type="number" class="form-control loanRoi" value="1">
         <input type="range" min="1" max="100" value="1" class="slider sldLoanRoi">
         <hr class="emi-calc">
-        Loan Tenure (years): <input type="number" class="form-control loanTen" value="1">
+        <label>Loan Tenure (years):</label><input type="number" class="form-control loanTen" value="1">
         <input type="range" min="1" max="500" value="1" class="slider sldLoanTen">
         <hr class="emi-calc">
         <div class="row row2">
