--- a/app/views/credit_card/step3.html.erb
+++ b/app/views/credit_card/step3.html.erb
@@ -8,7 +8,7 @@
               <th>Credit Card</th>
               <th>First Year Fee</th>
               <th>Annual Fee</th>
-              <th>Proceed</th>
+              <th>Proceed<%= image_tag "meter.gif", alt: "meter" %></th>
             </tr>
           </thead>
           <% @cards.each do |card| %>
