--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -456,9 +456,11 @@
           <div class="row">
             <div class="col-md-6 text-center">
               <%= image_tag "happy-customer.png" %>
+              <p>We serve all over <span>15000+</span> clients in india till date</p>
             </div>
             <div class="col-md-6 text-center">
               <%= image_tag "dis-amount.png" %>
+              <p>We have disbursed loans amount over <span>10Crore</span><br>from varous banks and NBFS</p>
             </div>
           </div>
         </div>
@@ -471,6 +473,7 @@
       </div>      
     </div>
   </div>
+  
   <div class="" style="margin: 0px 40px 0px 40px">
     <section class="padding-loans">
       <div class="owl-carousel partners">
