--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -143,6 +143,16 @@
   box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
   border-radius: 10px;
   background-color: #ebf3fa;
+  p {
+    font-size: 20px;
+    bottom: 30px;
+    position: relative;
+    font-weight: 600;
+    color: #315fc8;
+    span {
+      color: #c7384a;
+    }
+  }
 }
 
 .pb-feature-section .pb-feature {
