--- a/app/views/credit_card/step3.html.erb
+++ b/app/views/credit_card/step3.html.erb
@@ -1,33 +1,36 @@
 <section class="business-loan-section custom-container">
   <div class="container">
-    <div class="container">
-      <div class="row">
-        <table class="table loan-table">
-          <thead class="thead-light">
-            <tr>
-              <th>Credit Card</th>
-              <th>First Year Fee</th>
-              <th>Annual Fee</th>
-              <th>Proceed<%= image_tag "meter.gif", alt: "meter" %></th>
-            </tr>
-          </thead>
-          <% @cards.each do |card| %>
-            <tr>
-              <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(card.bank_image), width: 200, height: 100 %></div></td>
-              <td><%= number_to_currency(card.joining_charge, unit: "₹ ") %></td>
-              <td><%= [3, 2].include?(@credit_card.employment_type) ? "Free" : number_to_currency(card.annual_charge, unit: "₹ ") %></td>
-              <td>
-                <b>
-                  <%= form_for @credit_card, :url => { :action => "select_bank" }, html: {id:  "credit_card_bank", class: "credit_card_bank"} do |f| %>
-                    <input type="hidden" name="credit_card[id]" value="<%= card.id %>">
-                    <button type="submit" class="btn btn-custom">Apply</button>
-                  <%end%>
-                </b>
-              </td>
-            </tr>
-          <%end%>
-        </table>
-      </div>
+    <div class="row">
+      <table class="table loan-table">
+        <thead class="thead-light">
+          <tr>
+            <th>Credit Card</th>
+            <th>First Year Fee</th>
+            <th>Annual Fee</th>
+            <th>Card Approval Chances</th>
+            <th>Proceed</th>
+          </tr>
+        </thead>
+        <% @cards.each do |card| %>
+          <tr>
+            <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(card.bank_image), width: 200, height: 100 %></div></td>
+            <td><b><%= number_to_currency(card.joining_charge, unit: "₹ ") %></b></td>
+            <td><b><%= [3, 2].include?(@credit_card.employment_type) ? "Free" : number_to_currency(card.annual_charge, unit: "₹ ") %></b></td>
+            <td>
+              <%= image_tag "meter.png", alt: "meter" %><br>
+              <span style="color: #aaa4a4;">Excelent</span>
+            </td>
+            <td>
+              <b>
+                <%= form_for @credit_card, :url => { :action => "select_bank" }, html: {id:  "credit_card_bank", class: "credit_card_bank"} do |f| %>
+                  <input type="hidden" name="credit_card[id]" value="<%= card.id %>">
+                  <button type="submit" class="btn btn-custom">Apply</button>
+                <%end%>
+              </b>
+            </td>
+          </tr>
+        <%end%>
+      </table>
     </div>
   </div>
 </section>
