--- a/app/views/credit_card/step4.html.erb
+++ b/app/views/credit_card/step4.html.erb
@@ -30,7 +30,7 @@
         </div>
         <div class="col-md-4">
           <div class="form-group">
-            <label>Pincode</label>
+            <label>Pincode <span class="cc-pincode">Validating....</span></label>
             <%= f.number_field(:pincode, class: "form-control") %>
           </div>
         </div>
@@ -54,7 +54,7 @@
         </div>
         <div class="col-md-4">
           <div class="form-group">
-            <label>Office Pincode</label>
+            <label>Office Pincode <span class="cc-off-pincode">Validating....</span></label>
             <%= f.number_field(:office_pincode, class: "form-control") %>
           </div>
         </div>
