--- a/app/assets/stylesheets/personal_loan.scss
+++ b/app/assets/stylesheets/personal_loan.scss
@@ -7,6 +7,9 @@
 }
 .basic_personal_loan, .personal_loan, .employer_detail, .personal_loan_address, .personal_loan_assets {
   .container {
+    padding: 0px 15px 15px 15px;
+    box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
+    border-radius: 10px;
     .heading {
       height: 70px;
       background: linear-gradient(135deg,#294e9b,#6c6ea0);
