--- a/app/views/transfer_home_loan/step3.html.erb
+++ b/app/views/transfer_home_loan/step3.html.erb
@@ -12,6 +12,7 @@
               <th>EMI</th>
               <th>Processing Fee</th>
               <th class="pre-pay-charg">Prepayment Charges</th>
+              <th>Loan Approval Chances</th>
               <th>Proceed</th>
             </tr>
           </thead>
@@ -22,6 +23,10 @@
               <td><b><%= number_to_currency(tr_calculate_emi(bank.transfer_home_loan_bank_info, @transfer_home_loan), unit: "₹ ") %></b></td>
               <td><b><%= number_to_currency("%.2f" % processing_fee(bank.transfer_home_loan_bank_info.processing_fee, @transfer_home_loan.desired_loan_amount, bank), unit: "₹ ") %></b></td>
               <td class="pre-pay-charg"><%= bank.transfer_home_loan_bank_info.preprocessing_charges.html_safe %></td>
+              <td>
+                <%= image_tag "meter.png", alt: "meter" %><br>
+                <span style="color: #aaa4a4;">Excelent</span>
+              </td>
               <td>
                 <b>
                   <%= form_for @transfer_home_loan, :url => { :action => "select_bank" }, html: {id:  "transfer_home_loan_bank", class: "transfer_home_loan_bank"} do |f| %>
