--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,9 +95,9 @@
                           </div>
                           <br>
                           <div class="calculated-emi">
-                            <p>EMI: <span class="clt-emi"></span></p>
-                            <p>Interest Amount: <span class="clt-ia"></span></p>
-                            <p>Total Amount: <span class="clt-ta"></span></p>
+                            <p>EMI: <b>₹&nbsp;</b> <span class="clt-emi"></span></p>
+                            <p>Interest Amount: <b>₹&nbsp;</b> <span class="clt-ia"></span></p>
+                            <p>Total Amount: <b>₹&nbsp;</b> <span class="clt-ta"></span></p>
                           </div>
                         </form>
                       </li>
